[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-review-system"
version = "0.1.0"
description = "Multi-agent code review system powered by LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.2.74",
    "langchain-core==0.3.63",
    "openai==1.78.1",
    "httpx==0.28.1",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "gitpython==3.1.44",
    "typer==0.12.5",
    "rich==13.9.4",
    "pyyaml==6.0.2",
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
]

[project.optional-dependencies]
# Minimal install works out of the box. "full" adds external analyzers for richer Tier 1 signal.
full = [
    "ruff==0.11.8",
    "semgrep==1.120.0",
    "bandit==1.8.3",
]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "ruff==0.11.8",
]

[project.scripts]
code-review = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/code_review", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
